// ==========================================
// プロジェクト管理システム - 設備担当者がタスクをアサインする設計
// ==========================================

// ==========================================
// ユーザー管理
// ==========================================

Table User {
  "ユーザーID" text [pk, note: 'ユーザーID（6桁）']
  "日本語名" text [note: '日本語名']
  "電話番号" text [note: '電話番号']
  "メールアドレス" text [note: 'メールアドレス']
  "英語名" text [note: '英語名']
  "読み仮名" text [note: '読み仮名']
  "会社名" text [note: '会社名']
  "部門" text [note: '部門']
  "入社年" text [note: '入社年']
  "権限" text [note: '権限']
  "内線番号" text [note: '内線番号']
  "室" text [note: '室']
  "課" text [note: '課']
  "職位" text [note: '職位']
}

// ==========================================
// プロジェクト管理
// ==========================================

Table PROJECT {
  "行ID" Int [pk, increment]
  "プロジェクトID" String [unique, not null, note: 'プロジェクトID']
  "プロジェクト名" String [note: 'プロジェクト名']
  "プロジェクト説明" String [note: 'プロジェクト説明']
  "プロジェクト開始日" String [note: 'プロジェクト開始日']
  "プロジェクト終了日" String [note: 'プロジェクト終了日']
  "プロジェクトステータス" String [note: 'プロジェクトステータス']
  "クライアント名" String [note: 'クライアント名']
  "プロジェクト分類" String [note: 'プロジェクト分類']
  "予算グレード" String [note: '予算グレード']
  "設置日" String [note: '設置日']
  "図面完成日" String [note: '図面完成日']
  "設備カテゴリ" String [note: '設備カテゴリ']
  "商品カテゴリ" String [note: '商品カテゴリ']
  "作成日時" String [note: '作成日時']
  "更新日時" String [note: '更新日時']
  "備考" String [note: '備考']
  "予備1" String [note: '予備1']
  "予備2" String [note: '予備2']
  "予備3" String [note: '予備3']
  "プロジェクトフラグ" String [note: 'プロジェクトフラグ']
}

Table PROJECT_HISTORY {
  "履歴ID" Int [pk, increment]
  "プロジェクトID" String [not null, note: 'プロジェクトID']
  "アクションタイプ" String [not null, note: 'アクションタイプ（作成/更新/削除など）']
  "フィールド名" String [note: '変更フィールド名']
  "変更前の値" String [note: '変更前の値']
  "変更後の値" String [note: '変更後の値']
  "変更者ユーザーID" String [not null, note: '変更者ユーザーID']
  "変更日時" DateTime [default: `now()`, note: '変更日時']
}

Table PROJECT_MEMBERS {
  "メンバーID" Int [pk, increment]
  
  "プロジェクトID" String [not null, note: 'プロジェクトID']
  "ユーザーID" String [not null, note: 'ユーザーID']
  "役割" String [not null, note: '役割（PM/リーダー/メンバーなど）']
  "参加日時" DateTime [default: `now()`, note: '参加日時']
  "離脱日時" DateTime [note: '離脱日時（NULL=現在参加中）']
  "アサイン者ユーザーID" String [note: 'アサインした人のユーザーID']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']

  indexes {
    ("プロジェクトID", "ユーザーID") [unique, note: '同一プロジェクト内で同じユーザーは一度のみ']
  }
  
  note: 'プロジェクトメンバー管理テーブル'
}

// ==========================================
// 会議管理
// ==========================================

Table project_meetings {
  "会議ID" Int [pk, increment, note: '会議ID']
  
  "プロジェクトID" String [not null, note: 'プロジェクトID']
  "会議タイトル" String [not null, note: '会議タイトル']
  "会議説明" String [note: '会議説明']
  "会議タイプ" String [note: '会議タイプ（定例会/キックオフ/レビュー/その他）']
  "会議場所" String [note: '会議場所']
  "会議URL" String [note: 'オンライン会議URL']
  "開始日時" DateTime [not null, note: '会議開始日時']
  "終了日時" DateTime [not null, note: '会議終了日時']
  "ステータス" String [default: 'scheduled', note: 'scheduled/completed/cancelled/postponed']
  "議題" String [note: '議題']
  "議事録" String [note: '議事録']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']
  
  indexes {
    ("プロジェクトID", "開始日時") [note: 'プロジェクト別の会議検索用']
  }
  
  note: 'プロジェクト会議管理テーブル'
}

Table meeting_participants {
  "参加者ID" Int [pk, increment, note: '参加者ID']
  
  "会議ID" Int [not null, note: '会議ID']
  "プロジェクトメンバーID" Int [not null, note: 'プロジェクトメンバーID（PROJECT_MEMBERSのmember_id）']
  "参加ステータス" String [default: 'invited', note: 'invited/accepted/declined/tentative/attended']
  "会議役割" String [note: '会議での役割（議長/書記/参加者など）']
  "招待日時" DateTime [default: `now()`, note: '招待日時']
  "回答日時" DateTime [note: '回答日時']
  "出席フラグ" Boolean [default: false, note: '出席したかどうか']
  "参加者メモ" String [note: '参加者メモ']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']
  
  indexes {
    ("会議ID", "プロジェクトメンバーID") [unique, note: '同一会議に同じメンバーは一度のみ']
  }
  
  note: '会議参加者管理テーブル（プロジェクトメンバーから選択）'
}

Table meeting_agenda_items {
  "アジェンダ項目ID" Int [pk, increment, note: 'アジェンダ項目ID']
  
  "会議ID" Int [not null, note: '会議ID']
  "項目タイトル" String [not null, note: '項目タイトル']
  "項目説明" String [note: '項目説明']
  "予定時間（分）" Int [note: '予定時間（分）']
  "表示順序" Int [default: 0, note: '表示順序']
  "ステータス" String [default: 'pending', note: 'pending/discussed/deferred/completed']
  "討議メモ" String [note: '討議メモ']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']
  
  note: '会議アジェンダ項目管理テーブル'
}

Table meeting_action_items {
  "アクションアイテムID" Int [pk, increment, note: 'アクションアイテムID']
  
  "アジェンダ項目ID" Int [not null, note: 'アジェンダ項目ID']
  "プロジェクト設備ID" Int [note: '担当するプロジェクト設備ID']
  "タスクID" Int [unique, not null, note: '関連するタスクID（1対1関係）']
  "アクションタイトル" String [not null, note: 'アクションアイテムタイトル']
  "アクション説明" String [note: 'アクション説明']
  "期限日時" DateTime [note: '期限日時']
  "優先度" String [default: 'medium', note: 'low/medium/high/urgent']
  "ステータス" String [default: 'open', note: 'open/in_progress/completed/cancelled']
  "完了日時" DateTime [note: '完了日時']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']
  
  note: 'アジェンダ項目から派生したアクションアイテム管理テーブル（設備に紐づき、タスクと1対1関係）'
}

// ==========================================
// 設備管理
// ==========================================

Table setsubi_master {
  "設備ID" Int [pk, increment, note: '設備ID']
  "製番" String [unique, not null, note: '製番']
  "商品カテゴリ" String [note: '商品カテゴリ']
  "設備名" String [not null, note: '設備名']
  "親製番" String [note: '親製番']
  "ロケーションコード" String [note: 'ロケーションコード']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']
  
  note: '設備マスタテーブル'
}

Table project_setsubi {
  "プロジェクト設備ID" Int [pk, increment]
  "プロジェクトID" String [not null, note: 'プロジェクトID']
  "設備ID" Int [not null, note: '設備ID']
  
  "数量" Int [default: 1, note: '数量']
  "使用目的" String [note: '使用目的']
  "設置場所" String [note: '設置場所']
  "ステータス" String [default: 'active', note: 'active/completed/cancelled']
  "使用開始日" DateTime [note: '使用開始日']
  "使用終了日" DateTime [note: '使用終了日']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']

  indexes {
    ("プロジェクトID", "設備ID") [unique, note: '同一プロジェクト内で同じ設備は一度のみ']
  }
  
  note: 'プロジェクトで使用する設備の管理テーブル'
}

Table project_setsubi_assignment {
  "設備担当者ID" Int [pk, increment]
  
  "プロジェクトメンバーID" Int [not null, note: 'プロジェクトメンバーID（PROJECT_MEMBERSのmember_id）']
  "プロジェクト設備ID" Int [not null, note: 'プロジェクト設備ID']
  "設備担当役割" String [note: '設備担当役割（責任者/作業者/確認者など）']
  "担当開始日時" DateTime [default: `now()`, note: '担当開始日時']
  "担当解除日時" DateTime [note: '担当解除日時（NULL=現在有効）']
  "ステータス" String [default: 'active', note: 'active/inactive']
  "作成日時" DateTime [default: `now()`, note: '作成日時']
  "更新日時" DateTime [default: `now()`, note: '更新日時']

  indexes {
    ("プロジェクト設備ID", "プロジェクトメンバーID") [unique, note: '同一設備に同じメンバーは一度のみ']
  }
  
  note: 'プロジェクト設備への担当者アサイン管理（プロジェクトメンバーの中から割り当て）'
}

// ==========================================
// タスク管理
// ==========================================

Table tasks {
  "タスクID" integer [pk, increment, note: 'PRIMARY KEY AUTOINCREMENT']
  "親タスクID" integer [note: '親タスクID（NULL=ルートタスク）自己参照']
  "プロジェクト設備ID" integer [not null, note: 'プロジェクト設備ID（どの設備のタスクか）']
  "EPC_ID" text [note: 'EPC_ID 設計/製造/工事/プロマネ']
  "タスクタイプ" text [not null, default: 'タスク', note: 'タスクタイプ（将来の分類整理に備える）']
  "タスク名" text [not null, note: 'タスク名']
  "タスク説明" text [note: 'タスク説明']
  "開始予定日" text [note: '開始予定日']
  "終了予定日" text [note: '終了予定日']
  "ステータス" text [not null, default: '未着手', note: 'ステータス（未着手/進行中/完了など）']
  "予定作業時間" real [note: '予定作業時間']
  "実績作業時間" real [note: '実績作業時間']
  "表示順序" integer [default: 0, note: '同階層内での表示順序']
  "優先度" text [default: 'medium', note: '優先度（low/medium/high/urgent）']
  "削除フラグ" integer [default: 0, note: '削除フラグ（0=有効/1=削除済み）']
  "作成日時" text [not null, note: '作成日時']
  "更新日時" text [not null, note: '更新日時']
  
  note: 'タスク管理テーブル（設備に紐づく階層構造）'
}

Table task_assignments {
  "タスクアサインID" integer [pk, increment]
  
  "設備担当者ID" integer [not null, note: '設備担当者ID（project_setsubi_assignmentのid）']
  "タスクID" integer [not null, note: 'タスクID']
  "アサイン日時" text [not null, note: 'アサイン日時']
  "削除日時" text [note: '削除日時（NULL=現在有効）']
  "アサイン実行者ID" integer [note: 'アサインした人の設備担当者ID（project_setsubi_assignment.id）']
  "アサインメモ" text [note: 'アサイン時のメモ']
  "作成日時" text [default: `datetime('now')`, note: '作成日時']
  "更新日時" text [default: `datetime('now')`, note: '更新日時']
  
  indexes {
    ("タスクID", "設備担当者ID") [unique, note: '同一タスクへの同一担当者の重複防止']
  }
  
  note: 'タスク担当者管理テーブル（設備担当者のみアサイン可能）'
}

// ==========================================
// 実績管理（工数管理）
// ==========================================

Table events {
  id text [pk, note: 'イベントID（UUID）']
  title text [not null, note: 'イベントタイトル']
  description text [note: 'イベント説明']
  project text [note: 'プロジェクトID（プロジェクト作業の場合）']
  category text [note: 'カテゴリ（プロジェクト/間接/その他）']
  activityCode text [note: '活動コード（作業分類）']
  
  // プロジェクト関連情報
  equipmentNumber text [note: '設備番号（製番）']
  equipmentName text [note: '設備名']
  equipment_id text [note: '設備ID']
  equipment_Name text [note: '設備名（代替カラム）']
  itemName text [note: '品目名']
  purposeProject text [note: '目的プロジェクト']
  departmentCode text [note: '部門コード']
  
  // 間接業務関連情報
  indirectType text [note: '間接タイプ（会議/教育/その他）']
  indirectDetailType text [note: '間接詳細タイプ']
  
  // UI状態管理
  selectedTab text [note: '選択タブ（project/indirect/other）']
  selectedProjectSubTab text [note: 'プロジェクトサブタブ']
  selectedIndirectSubTab text [note: '間接サブタブ']
  selectedIndirectDetailTab text [note: '間接詳細タブ']
  selectedOtherSubTab text [note: 'その他サブタブ']
  
  // 日時情報
  startDateTime text [not null, note: '開始日時（ISO 8601形式）']
  endDateTime text [not null, note: '終了日時（ISO 8601形式）']
  
  // 表示制御
  top real [note: 'UI表示位置（top）']
  height real [note: 'UI表示サイズ（height）']
  color text [note: '表示色（カラーコード）']
  unsaved integer [default: 0, note: '未保存フラグ（0=保存済/1=未保存）']
  status text [default: 'active', note: 'ステータス（active/completed/cancelled）']
  
  // ユーザー情報
  employeeNumber text [note: 'ユーザーID（従業員番号）']
  
  // タイムスタンプ
  createdAt text [not null, note: '作成日時（ISO 8601形式）']
  updatedAt text [not null, note: '更新日時（ISO 8601形式）']
  
  indexes {
    (employeeNumber, startDateTime) [note: 'ユーザー別の実績検索用']
    (project, startDateTime) [note: 'プロジェクト別の実績検索用']
    (startDateTime) [note: '日時検索用']
  }
  
  note: '実績イベント管理テーブル（工数実績を記録） - 実績デモで保存ボタンを押すとこのテーブルに保存される'
}

// ==========================================
// リレーション定義
// ==========================================

// プロジェクト関連
Ref: PROJECT."プロジェクトID" < PROJECT_HISTORY."プロジェクトID" [delete: cascade]
Ref: PROJECT."プロジェクトID" < PROJECT_MEMBERS."プロジェクトID" [delete: cascade]
Ref: User."ユーザーID" < PROJECT_MEMBERS."ユーザーID"

// 会議関連
Ref: PROJECT."プロジェクトID" < project_meetings."プロジェクトID" [delete: cascade]
Ref: project_meetings."会議ID" < meeting_participants."会議ID" [delete: cascade]
Ref: PROJECT_MEMBERS."メンバーID" < meeting_participants."プロジェクトメンバーID"
Ref: project_meetings."会議ID" < meeting_agenda_items."会議ID" [delete: cascade]
Ref: meeting_agenda_items."アジェンダ項目ID" < meeting_action_items."アジェンダ項目ID" [delete: cascade]
Ref: project_setsubi."プロジェクト設備ID" < meeting_action_items."プロジェクト設備ID" [delete: set null]
Ref: meeting_action_items."タスクID" < tasks."タスクID" [delete: cascade]

// 設備関連
Ref: PROJECT."プロジェクトID" < project_setsubi."プロジェクトID" [delete: cascade]
Ref: setsubi_master."設備ID" < project_setsubi."設備ID"
Ref: project_setsubi."プロジェクト設備ID" < project_setsubi_assignment."プロジェクト設備ID" [delete: cascade]
Ref: PROJECT_MEMBERS."メンバーID" < project_setsubi_assignment."プロジェクトメンバーID"

// タスク関連（設備ベース）
Ref: tasks."親タスクID" > tasks."タスクID" [delete: set null]
Ref: tasks."プロジェクト設備ID" > project_setsubi."プロジェクト設備ID" [delete: cascade]
Ref: task_assignments."タスクID" > tasks."タスクID" [delete: cascade]
Ref: task_assignments."設備担当者ID" > project_setsubi_assignment."設備担当者ID" [delete: cascade]

// 実績関連
Ref: User."ユーザーID" < events.employeeNumber [delete: set null]
Ref: PROJECT."プロジェクトID" < events.project [delete: set null]
